# ProgettoPCS2025

./: .gitignore  CMakeLists.txt  README.md  UML.txt  UML_Paraview.txt  main.cpp  main_test.cpp  questioni.txt
src/: CmakeLists.txt  PlatonicSolids.hpp  Utils.cpp  Utils.hpp
src_test/: CMakeLists.txt  test_platonic_solids.hpp
